@@ -87,5 +87,6 @@ $INSERT_window_onload	= '';	# inserted at the end of the onload function
 $INSERT_agent_events	= '';	# inserted within the agent_events function
 
 $OnlyInbounds = 0; # Used in vdc_db_query to display only AGENTDIRECT inbounds in call log
+$OverWriteAfterCallSurvey = 0; # Set to 1 to allow without OptIn
 
 ?>
